Implemented product logic

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -54,6 +54,10 @@ h6 {
   color: var(--blue) !important;
 }
 
+.singlePord{
+  text-decoration: none;
+  color: #fff;
+}
 /* Buttons */
 .btn-orange {
   background-color: var(--orange);
