--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -18,6 +18,10 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+input, select, textarea {
+  border: 1px solid rgb(192, 192, 192) !important;
+}
+
 .admin-wrapper {
   display: flex;
   min-height: 100vh;
